--- a/config.toml
+++ b/config.toml
@@ -7,4 +7,46 @@ enableEmoji = true
 title = "A Little Bit Rusty"
 author = "James Sargant"
 description = "A Digital Home"
+profilePicture = "images/profile_pic.jpeg"
+mainSections = ["blog"]
 
+
+
+[[params.socialIcons]]
+icon = "fab fa-linkedin"
+title = "LinkedIn"
+url = "https://www.linkedin.com/in/james-sargant-75b84ba7/"
+
+[[params.socialIcons]]
+icon = "fab fa-github"
+title = "GitHub"
+url = "https://github.com/shorinbonsai"
+
+
+[[params.socialIcons]]
+icon = "fas fa-envelope"
+title = "e-mail"
+url = "mailto:shorinbonsai@gmail.com"
+
+
+
+
+[menu]
+
+  [[menu.main]]
+  name = "Home"
+  identifier = "home"
+  weight = 1
+  url = "/"
+
+  [[menu.main]]
+  name = "Blog"
+  weight = 2
+  identifier = "blog"
+  url = "/blog/"
+
+  [[menu.main]]
+  name = "About"
+  weight = 300
+  identifier = "about"
+  url = "/about/"
